dispatcher-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # pass ssl to app backend
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
  name: dispatcher-ingress
  namespace: grpc
spec:
  rules:
  - host: grpc-dispatcher.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: dispatcher-server
          servicePort: 50051
