greeter-ingress-terminate.yaml
# Terminate ssl at ingress level
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
  name: greeter-ingress
  namespace: grpc
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: grpc-ingress.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: greeter-server
          servicePort: 50051
